// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceInput should be invalid for bad cron 1`] = `
Object {
  "cron": "yup:string.cron",
}
`;

exports[`SourceInput should be invalid for bad harvest_mode 1`] = `
Object {
  "harvestMode": Object {
    "key": "yup:mixed.oneOf",
    "options": Object {
      "values": "allAtOnce, oneByOne",
    },
  },
}
`;

exports[`SourceInput should be invalid for bad region 1`] = `
Object {
  "regions": Array [
    Object {
      "id": "yup:string.uuid",
    },
  ],
}
`;

exports[`SourceInput should be invalid for bad url 1`] = `
Object {
  "url": Object {
    "key": "yup:string.url",
    "options": Object {
      "path": "url",
    },
  },
}
`;

exports[`SourceInput should be invalid for bad uuid 1`] = `
Object {
  "id": "yup:string.uuid",
}
`;

exports[`SourceInput should be invalid for empty name 1`] = `
Object {
  "name": "yup:string.nonEmpty",
}
`;

exports[`SourceInput should be invalid for empty script 1`] = `
Object {
  "script": Object {
    "key": "yup:string.min",
    "options": Object {
      "min": 1,
      "path": "script",
    },
  },
}
`;

exports[`SourceInput should be invalid for extra fields 1`] = `
Object {
  "undefined": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;

exports[`SourceInput should be invalid for some bad regions legacy snapshot 1`] = `
Object {
  "regions": Array [
    Object {
      "id": "yup:string.uuid",
    },
    undefined,
    Object {
      "id": "yup:string.uuid",
    },
  ],
}
`;
